--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SP</string>
+    <string name="intro">Introduction</string>
+    <string name="textIntro">Hello! Welcome to the app, this is how you keep in touch with school\'s event!</string>
+    <string name="eventBtn">Events</string>
+    <string name="socialBtn">Social Media</string>
 </resources>
