Update on Events page (Camps, AGMs, Talks button added)
JSON (Network) is able to display the items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="socialBtn">Social Media</string>
     <string name="aboutInfo">About Us</string>
     <string name="socialMedia">The links should be here</string>
+    <string name="campBtn">Camps</string>
+    <string name="agmBtn">AGM</string>
+    <string name="talkBtn">Talks</string>
 </resources>
