Camps Recycler View Dynamic is done (Link have not added, perhaps hyperlink?)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="aboutInfo">About Us</string>
     <string name="socialMedia">The links should be here</string>
     <string name="campBtn">Camps</string>
-    <string name="agmBtn">AGM</string>
+    <string name="agmBtn">AGMs</string>
     <string name="talkBtn">Talks</string>
 </resources>
